# prod-ready-ml-public

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01_packaging.ipynb  02_code_quality.ipynb  04_unit_tests.ipynb  06_logging.ipynb
notebooks/cli/: 01_CLI.ipynb  argparse_cli.py  simple_script.py  typer_cli.py
notebooks/context_managers/: 01_Context_Managers.ipynb
notebooks/decorators_pipelines/: Decorators.ipynb  Pandas_Pipelines.ipynb
notebooks/fastapi/: 02_Pydantic.ipynb  04_Fastapi_Responses.ipynb  app.py  hello_api.py  responsive_api.py  sleepy_api.py  tests.py
notebooks/generators_iterators/: 01_Iterators.ipynb  02_Generators.ipynb
notebooks/oop/: 01_Classes_and_Attributes.ipynb  02_Parent_Child_Classes.ipynb  03_Better_Integration.ipynb  04_Assignment_Parent_and_Dunder_Methods.ipynb  05_getitem_and_setitem.ipynb  06_Uninstantiated_Classes.ipynb  07_Data_Classes.ipynb  08_Protect_Private_Variables.ipynb  09_Hackathon.ipynb
src/animal_shelter/: __init__.py  data.py  features.py  model.py
tests/: test_data.py  test_features.py
